Possibly fix map positioning on iPhone X

--- a/src/app/pages/map/map.page.scss
+++ b/src/app/pages/map/map.page.scss
@@ -1,5 +1,15 @@
 // TODO Remove padding for iPhone X etc., because flowing into the top is quite cool with the map
 
+app-map {
+    top: calc(-1 * constant(safe-area-inset-top)); // for iOS 11.2
+    top: calc(-1 * env(safe-area-inset-top)); // for iOS 11.1
+}
+app-map, app-map ion-content, app-map ion-content > * {
+    height: calc(100vh + constant(safe-area-inset-top));
+    height: calc(100vh + env(safe-area-inset-top));
+}
+
+
 #map_canvas {
     width: 90%;
     height: 100%;
